--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,9 @@
 $black: #1f1f1f;
-$white: #dddddd;
+$white: #f6f6f4ff;
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.ttf");
+}
 *,
 *::after,
 *::before {
@@ -20,6 +24,7 @@ body {
   height: 100vh;
   width: 100vw;
   position: relative;
+  overflow: hidden;
 }
 .map-container {
   width: 100%;
@@ -88,21 +93,53 @@ body {
 .nav {
   z-index: 98;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: $white;
   display: flex;
   align-items: center;
 }
 .modal {
-  z-index: 100;
+  z-index: 97;
   position: absolute;
-  bottom: 0;
-  width: 100vw;
-  height: 40vh;
+  bottom: -30%;
+  width: 100%;
+  height: 70%;
   background-color: $white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   button {
+    position: absolute;
+    top: 0;
+    right: 0;
     width: 80px;
     height: 60px;
+    background: none;
+    border: none;
+    font-size: 4rem;
+  }
+  .content-container {
+    margin-top: 4em;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h2 {
+      text-align: center;
+      margin-top: 1rem;
+    }
+    .hours {
+      margin-top: 1em;
+      font-size: 2rem;
+    }
+  }
+  .line {
+    position: absolute;
+    top: 10px;
+    width: 10%;
+    max-width: 100px;
+    height: 3px;
+    background-color: #bfbfbfff;
   }
 }
