added message to nav

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -98,6 +98,7 @@ body {
   background-color: $white;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .modal {
   z-index: 97;
